--- a/backend/jest.config.json
+++ b/backend/jest.config.json
@@ -4,13 +4,13 @@
     "json",
     "ts"
   ],
-  "rootDir": "test",
+  "rootDir": "./",
   "testRegex": ".*\\.spec\\.ts$",
   "transform": {
     "^.+\\.(t|j)s$": "ts-jest"
   },
   "collectCoverageFrom": [
-    "**/*.(t|j)s"
+    "src/**/*.(t|j)s"
   ],
   "coverageDirectory": "../coverage",
   "testEnvironment": "node"
