--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "rxjs": "^7.2.0",
     "sqlite3": "^5.1.4",
     "typeorm": "^0.3.11",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
